Обновлены зависимости, обновлена версия java до 16, добавлен junit, добавлена поддержка непереносимых дедлайнов.
Но это надо тестировать и дорабатывать... Оставил несколько TODO.